[package]
name = "shared_cell"
version = "0.2.0"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Interior mutability between concurrent tasks on the same thread"
repository = "https://github.com/AldaronLau/shared_cell"
documentation = "https://docs.rs/shared_cell"
homepage = "https://github.com/AldaronLau/shared_cell/blob/stable/CHANGELOG.md"
include = [
    "/LICENSE_APACHE",
    "/LICENSE_BOOST",
    "/LICENSE_MIT",
    "/README.md",
    "/examples/",
    "/src/",
]
categories = [
    "asynchronous",
    "concurrency",
    "data-structures",
    "no-std",
    "rust-patterns",
]
keywords = ["cell", "interior", "mutability", "local", "async"]
readme = "README.md"
edition = "2021"

[dev-dependencies.async_main]
version = "0.4"
features = ["futures"]

[dev-dependencies.futures]
version = "0.3"

[dev-dependencies.pasts]
version = "0.14"

[dev-dependencies.tokio]
version = "1.30"
features = ["macros", "rt"]

[dev-dependencies.whisk]
version = "0.12"
